  those paths, i.e. and not 'x.y.x'; eagerload('children.children') applies
  only to exactly two-levels deep, etc. [ticket:777]

- Made access dao detection more reliable [ticket:828]

- Removed unused util.hash().

- Fixed __hash__ for association proxy- these collections are unhashable,
  just like their mutable Python counterparts.

0.4.0
-----

- (see 0.4.0beta1 for the start of major changes against 0.3, 
  as well as http://www.sqlalchemy.org/trac/wiki/WhatsNewIn04 )

- Added initial Sybase support (mxODBC so far) [ticket:785]

- Added partial index support for PostgreSQL. Use the postgres_where keyword
  on the Index.

- string-based query param parsing/config file parser understands
  wider range of string values for booleans [ticket:817]
  
- backref remove object operation doesn't fail if the other-side
  collection doesn't contain the item, supports noload collections
  [ticket:813]

- removed __len__ from "dynamic" collection as it would require issuing
  a SQL "count()" operation, thus forcing all list evaluations to issue
  redundant SQL [ticket:818]
  
- inline optimizations added to locate_dirty() which can greatly speed up
  repeated calls to flush(), as occurs with autoflush=True [ticket:816]
  
- The IdentifierPreprarer's _requires_quotes test is now regex based.  Any
  out-of-tree dialects that provide custom sets of legal_characters or
  illegal_initial_characters will need to move to regexes or override
  _requires_quotes.

- Firebird has supports_sane_rowcount and supports_sane_multi_rowcount set
  to False due to ticket #370 (right way).

- Improvements and fixes on Firebird reflection:
  . FBDialect now mimics OracleDialect, regarding case-sensitivity of TABLE and
    COLUMN names (see 'case_sensitive remotion' topic on this current file).
  . FBDialect.table_names() doesn't bring system tables (ticket:796).
  . FB now reflects Column's nullable property correctly.

- Fixed SQL compiler's awareness of top-level column labels as used